# oab-bot

./: .gitignore  .gitmodules  Makefile  PROJECT_PLAN.md  README.md  benchmark.py  config.py  dashboard.html  dashboard.py  env.py  evaluate.py  oab_shared.py  play.py  requirements.txt  run.sh  run_local.sh  train.py
oab-py/: Cargo.toml  test_pylib.py
oab-py/src/: actions.rs  lib.rs  obs.rs
pylib/: Cargo.toml
pylib/src/: lib.rs
pytest-of-shawntabrizi/: pytest-current
pytest-of-shawntabrizi/pytest-0/: test_config_load_savecurrent  test_config_partial_jsoncurrent
scripts/: run_tournament.sh
server/: Cargo.toml
server/pytest-of-shawntabrizi/: pytest-current
server/pytest-of-shawntabrizi/pytest-0/: test_config_load_savecurrent  test_config_partial_jsoncurrent
server/pytest-of-shawntabrizi/pytest-0/test_config_load_save0/: test_config.json
server/pytest-of-shawntabrizi/pytest-0/test_config_partial_json0/: partial.json
server/src/: chain.rs  constructed.rs  http.rs  local.rs  main.rs  types.rs
tests/: test_env.py  test_shared.py
