[package]
name = "oab-server"
version = "0.1.0"
description = "HTTP game server for AI agents to play Open Auto Battler"
authors = ["Shawn Tabrizi <shawntabrizi@gmail.com>"]
edition = "2021"
license = "MIT-0"

[[bin]]
name = "oab-server"
path = "src/main.rs"

[features]
default = ["chain"]
chain = ["subxt", "subxt-signer", "tokio"]

[dependencies]
oab-battle = { path = "../../open-auto-battler/battle", features = ["std", "bounded"] }
oab-assets = { path = "../../open-auto-battler/assets", features = ["std", "bounded"] }
oab-game = { path = "../../open-auto-battler/game", features = ["std", "bounded"] }
serde = { version = "1.0.214", features = ["derive", "std"] }
serde_json = { version = "1.0.132", features = ["std"] }
parity-scale-codec = { version = "3.7.4", features = ["std", "derive"] }
bounded-collections = { version = "0.2.4", features = ["std"] }
tiny_http = "0.12"
subxt = { version = "0.38", optional = true }
subxt-signer = { version = "0.38", features = ["sr25519", "subxt"], optional = true }
tokio = { version = "1", features = ["full"], optional = true }
