[package]
name = "oab-server"
version = "0.1.0"
description = "HTTP game server for AI agents to play Open Auto Battler"
authors = ["Shawn Tabrizi <shawntabrizi@gmail.com>"]
edition = "2021"
license = "MIT-0"

[[bin]]
name = "oab-server"
path = "src/main.rs"

[features]
default = ["chain"]
chain = ["ureq", "tiny-keccak"]

[dependencies]
oab-battle = { path = "../deps/open-auto-battler/battle", features = ["std", "bounded"] }
oab-assets = { path = "../deps/open-auto-battler/assets", features = ["std", "bounded"] }
oab-game = { path = "../deps/open-auto-battler/game", features = ["std", "bounded"] }
serde = { version = "1.0.214", features = ["derive", "std"] }
serde_json = { version = "1.0.132", features = ["std"] }
parity-scale-codec = { version = "3.7.4", features = ["std", "derive"] }
bounded-collections = { version = "0.2.4", features = ["std"] }
tiny_http = "0.12"
clap = { version = "4", features = ["derive", "env"] }
ureq = { version = "2", features = ["json"], optional = true }
tiny-keccak = { version = "2", features = ["keccak"], optional = true }
